# qa

./: .gitignore  Dockerfile  README.md  accept-10-final.mjs  accept-10-sh.sh  accept-10-tasks.mjs  accept-10-v2.mjs  accept-4-translation.mjs  accept-5-tasks.sh  agent_audit_PRD.md  agent_audit_dashboard.html  approve-task.mjs  bug.md  claim-and-submit-10-tasks.mjs  create-10-tasks.sh  create-5-more-tasks.sh  create-translation-task.mjs  create-urgent-task.py  create-urgent.mjs  fund-2-tasks.mjs  fund-5-new-tasks.mjs  fund-7-translation.mjs  fund-flow-test.mjs  fund-new-task.mjs  fund-single-task.mjs  fund-task.mjs  missing.md  package.json  performance.md  security.md  sign-tool.html  transfer-usdc.mjs  vote-arbitration.mjs
Health-AI/: Dockerfile  REVIEW_SUMMARY_V2.md  accept-5-agent3.mjs  arbitration-test-plan.md  audit_report.json  bug.md  clawbounty-sign.html  create-10-more-tasks.mjs  create-10-translation.mjs  create-5-tasks-v3.mjs  create-5-tasks-v4.mjs  create-5-tasks.sh  create-tasks-new-agent.mjs  docker-compose.yml  fund-all-tasks.mjs  join-arb-all.mjs  join-arb-two.mjs  list-my-tasks.mjs  missing.md  pay.js  security.md  security2.md  transfer-usdc-v2.mjs
Health-AI/backend/: requirements.txt
Health-AI/frontend/: index.html  main.js  main.js.fixed  report.html  styles.css  workspace.html
Health-AI/platform/: README.md  oneclick_server.py
frontend/: main.js  workspace.html
standalone-agent-audit/: README.md  agent_audit.py
standalone-agent-audit/pip_package/: pyproject.toml
standalone-agent-audit/pip_package/agent_audit_cli/: cli.py  core.py
(+13 files in other folders)
