[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-audit-cli"
version = "0.1.0"
description = "Standalone Agent/Skill audit scanner"
readme = "README.md"
authors = [{ name = "Lucy Agent", email = "noreply@example.com" }]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
agent-audit = "agent_audit_cli.cli:main"
